<resources>
    <string name="app_name">My UST Task</string>
    <string name="ust_oauth_2_0_via_google">UST OAuth 2.0 via Google</string>
    <string name="login">Login</string>
    <string name="network_devices">Network Devices</string>
    <string name="postal_code">Postal Code:</string>
    <string name="country">Country:</string>
    <string name="region">Region:</string>
    <string name="city">City:</string>
    <string name="organization">Organization:</string>
    <string name="ip">IP: </string>
    <string name="web_client_id">799458274448-fd0uomabstb2g2qsbc5petd1v8pgfc69.apps.googleusercontent.com</string>
</resources>