<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIpAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192.168.5.1" />

        </LinearLayout>


        <!-- Org -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/organization"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AS9829 National Internet Backbone" />

        <!-- City -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/city"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mumbai" />

        <!-- Region -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/region"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Maharashtra" />

        <!-- Country -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/country"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IN" />


        <!-- Postal -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/postal_code"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPostal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="400017" />


    </LinearLayout>

</LinearLayout>